samples/_failures_safe/1761173575_8ab9ef_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01ee7fbb.c: In function ‘main’:
./samples/SAFE/__tmp_01ee7fbb.c:141:5: error: expected expression at end of input
  141 |     addEdge(graph, 0, 1,
      |     ^~~~~~~
./samples/SAFE/__tmp_01ee7fbb.c:141:5: error: expected declaration or statement at end of input
